--- a/scripts/iccat-spillover-main.Rmd
+++ b/scripts/iccat-spillover-main.Rmd
@@ -122,7 +122,7 @@ iccat_df_final_test2 <- iccat_df_final_edit %>%
   group_by(YearC, FleetGear) %>% 
   mutate(totalCatch = sum(Qty_t),
          tac_catch = sum(Qty_t[tacr==1])) %>% #Total catch grouped by FleetGear and YearC
-  mutate(prop_tacC = Qty_t/totalCatch)
+  mutate(prop_tacC = tac_catch/totalCatch) #mb: notice this is different
 
 hist(iccat_df_final_test2$prop_tacC)
 
@@ -147,11 +147,11 @@ iccat_df_final_reg <- iccat_df_final_test2
 #Question. Does the catch of fleets that are catching one or more TAC stock increase or decrease relative to fleets that do not catch any TAC stocks when we account for the relative proportion of TAC-treated stocks in the catch?
 #Answer from the regression: Got stuck here - the proportion variable (prop_tacC) was removed due to collinearity.
 
-tac_reg2 <- lm(Qty_t ~ tac_any*prop_tacC + as.factor(YearC) + FleetGear + SpeciesStock, data = filter(iccat_df_final_reg, tacr==0))
-summary(tac_reg2)
-
-tac_reg2b <- feols(Qty_t ~ tac_any*prop_tacC | YearC + FleetGear + SpeciesStock, data = filter(iccat_df_final_reg, tacr==0))
-print(tac_reg2b)
+# tac_reg2 <- lm(Qty_t ~ tac_any*prop_tacC + as.factor(YearC) + FleetGear + SpeciesStock, data = filter(iccat_df_final_reg, tacr==0))
+# summary(tac_reg2)
+# 
+# tac_reg2b <- feols(Qty_t ~ tac_any*prop_tacC | YearC + FleetGear + SpeciesStock, data = filter(iccat_df_final_reg, tacr==0))
+# # print(tac_reg2b)
 
 tac_reg2c <- feols(Qty_t ~ prop_tacC | YearC^SpeciesStock + FleetGear, data = filter(iccat_df_final_reg, tacr==0))
 coef_tab <- tac_reg2c$coeftable
